ONM-2673: Fix minor jump on advertisement positions tabs on hover

--- a/public/assets/src/opennemas-webarch/less/components/_angular-ui-tab-scroll.less
+++ b/public/assets/src/opennemas-webarch/less/components/_angular-ui-tab-scroll.less
@@ -3,6 +3,10 @@
     height: 50px !important;
     border-radius: 0;
   }
+  & > .spacer:not(.hidden-buttons) > div:first-child > .nav-tabs > li:first-child.active a,
+    .ui-tabs-scrollable > .spacer:not(.hidden-buttons) > div:first-child > .nav-tabs > li:first-child a:hover {
+      border-left: 0px none;
+  }
 
   .nav.nav-tabs {
     background-color: #f8f8f8;
@@ -11,7 +15,7 @@
     overflow-x: scroll!important;
     z-index: 99;
   }
-  
+
   .nav.nav-tabs::-webkit-scrollbar {
     display: none!important;
   }
@@ -22,7 +26,7 @@
     color:@header-color;
     z-index: 100;
   }
-  
+
   & > .nav-button[disabled] {
     display: none!important;
   }
@@ -33,7 +37,7 @@
     background: white;
     width: 50px;
   }
-  
+
   & > .nav-button.right-nav-button {
     background: -webkit-gradient(linear, left top, right top, from(rgba(248, 248, 248, 0)),color-stop(50%, #f8f8f8),to(#f8f8f8))!important;
     background: -webkit-linear-gradient(left, rgba(248, 248, 248, 0) 0%,#f8f8f8 50%,#f8f8f8 100%)!important;
@@ -41,7 +45,7 @@
     background: linear-gradient(to right, rgba(248, 248, 248, 0) 0%,#f8f8f8 50%,#f8f8f8 100%)!important;
     padding-left: 25px;
   }
-  
+
   & > .nav-button.left-nav-button {
     background: -webkit-gradient(linear, right top, left top, from(rgba(248, 248, 248, 0)),color-stop(50%, #f8f8f8),to(#f8f8f8))!important;
     background: -webkit-linear-gradient(right, rgba(248, 248, 248, 0) 0%,#f8f8f8 50%,#f8f8f8 100%)!important;
@@ -59,12 +63,12 @@
     font-family: 'FontAwesome';
     content: "\f105";
   }
-  
+
   .nav.nav-tabs .badge {
     background-color: #999;
     color: #fff;
     min-width: 25px;
     padding: 5px 5px
   }
-  
+
 }
